force-app/main/default/objects/vlocity_cmt__PricingPlanStep__c/fields/vlocity_cmt__ImplementationName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ImplementationName__c</fullName>
    <label>Implementation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>