force-app/main/default/objects/vlocity_cmt__PricingPlanStep__c/fields/vlocity_cmt__MethodName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MethodName__c</fullName>
    <label>Method Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>