force-app/main/default/objects/vlocity_cmt__PricingPlanStep__c/fields/vlocity_cmt__Parameters__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Parameters__c</fullName>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>