force-app/main/default/objects/vlocity_cmt__PricingPlanStep__c/fields/vlocity_cmt__Sequence__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>